--- a/package.json
+++ b/package.json
@@ -12,12 +12,24 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.162.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
+    "postcss-load-config": "^4.0.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "sass": "^1.62.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "5.0.4",
+    "yaml": "^2.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   }
 }
