--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.1",
     "bootstrap": "^5.2.3",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "lucide-react": "^0.162.0",
-    "next": "13.3.0",
+    "next": "^13.4.3",
     "postcss-load-config": "^4.0.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-client": "^1.0.1",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
     "tailwind-merge": "^1.12.0",
