--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.162.0",
     "next": "^13.4.3",
     "postcss-load-config": "^4.0.1",
