--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.162.0",
-    "next": "^13.4.3",
+    "next": "^14.3.0-canary.37",
     "postcss-load-config": "^4.0.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
